:bug: fixed layout bug on recommended articles

--- a/_css/layout/_margin.css
+++ b/_css/layout/_margin.css
@@ -58,3 +58,9 @@
 .mt-header {
     margin-top: 73px;
 }
+
+@media (max-width: 531px) {
+    .mb5-m {
+        margin-bottom: var(--f5);
+    }
+}
